--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -1,12 +1,12 @@
-$primary: var(--turquoise, #{$turquoise}) !default
+$primary: $turquoise !default
 
-$info: var(--cyan, #{$cyan}) !default
-$success: var(--green, #{$green}) !default
-$warning: var(--yellow, #{$yellow}) !default
-$danger: var(--red, #{$red}) !default
+$info: $cyan !default
+$success: $green !default
+$warning: $yellow !default
+$danger: $red !default
 
-$light: var(--white-ter, #{$white-ter}) !default
-$dark: var(--grey-darker, #{$grey-darker}) !default
+$light: $white-ter !default
+$dark: $grey-darker !default
 
 // Invert colors
 
@@ -76,7 +76,7 @@ $pre-background: var(--background, #{$background}) !default
 
 // Link colors
 
-$link: var(--blue, #{$blue}) !default
+$link: $blue !default
 $link-rgb: bulmaToRGB($blue) !default
 $link-invert: findColorInvert($link, $blue) !default
 $link-light: findLightColor($link, $blue) !default
