--- a/bulma.sass
+++ b/bulma.sass
@@ -8,4 +8,4 @@
 @import "sass/grid/_all"
 @import "sass/helpers/_all"
 @import "sass/layout/_all"
-@import "sass/themes/default"
+@import "sass/themes/basic"
