--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -126,7 +126,9 @@ $button-colors: $colors !default
       color: $color-invert
       &:hover,
       &.is-hovered
-        background-color: bulmaDarken($color, 2.5%)
+        --hover-#{$name}-l: calc(#{var(--#{$name}-l)} + 10%)
+        --button-hover-background-color: hsla(var(--#{$name}-h), var(--#{$name}-s), var(--hover-#{$name}-l), var(--#{$name}-a))
+        background-color: var(--button-hover-background-color, #{bulmaDarken($color, 2.5%)})
         border-color: transparent
         color: $color-invert
       &:focus,
